--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
   <button class="btn saveBtn col-md-1"></button>
   </div>
 
+  <!-- save button for each text block -->
+
   <div id="hour-10" class="row time-block past">
   <div class="col-md-1 hour"> 10am </div>
   <textarea class="col-md-10 description"></textarea>
