--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <div id="hour-9" class="row time-block past">
   <div class="col-md-1 hour"> 9am </div>
   <textarea class="col-md-10 description"></textarea>
-  <button class="btn saveBtn col-md-1"></button>
+  <button class="btn saveBtn col-md-1"> Save </button>
   </div>
 
   <!-- save button for each text block -->
@@ -33,49 +33,49 @@
   <div id="hour-10" class="row time-block past">
   <div class="col-md-1 hour"> 10am </div>
   <textarea class="col-md-10 description"></textarea>
-  <button class="btn saveBtn col-md-1"></button>
+  <button class="btn saveBtn col-md-1">Save</button>
   </div>
 
   <div id="hour-11" class="row time-block past">
   <div class="col-md-1 hour"> 11am </div>
   <textarea class="col-md-10 description"></textarea>
-  <button class="btn saveBtn col-md-1"></button>
+  <button class="btn saveBtn col-md-1">Save</button>
   </div>
 
   <div id="hour-12" class="row time-block past">
   <div class="col-md-1 hour"> 12pm </div>
   <textarea class="col-md-10 description"></textarea>
-  <button class="btn saveBtn col-md-1"></button>
+  <button class="btn saveBtn col-md-1">Save</button>
   </div>
 
   <div id="hour-13" class="row time-block past">
   <div class="col-md-1 hour"> 1pm </div>
   <textarea class="col-md-10 description"></textarea>
-  <button class="btn saveBtn col-md-1"></button>
+  <button class="btn saveBtn col-md-1">Save</button>
   </div>
 
   <div id="hour-14" class="row time-block past">
   <div class="col-md-1 hour"> 2pm </div>
   <textarea class="col-md-10 description"></textarea>
-  <button class="btn saveBtn col-md-1"></button>
+  <button class="btn saveBtn col-md-1">Save</button>
   </div>
 
   <div id="hour-15" class="row time-block past">
   <div class="col-md-1 hour"> 3pm </div>
   <textarea class="col-md-10 description"></textarea>
-  <button class="btn saveBtn col-md-1"></button>
+  <button class="btn saveBtn col-md-1">Save</button>
   </div>
 
   <div id="hour-16" class="row time-block past">
   <div class="col-md-1 hour"> 4pm </div>
   <textarea class="col-md-10 description"></textarea>
-  <button class="btn saveBtn col-md-1"></button>
+  <button class="btn saveBtn col-md-1">Save</button>
   </div>
 
   <div id="hour-17" class="row time-block past">
   <div class="col-md-1 hour"> 5pm </div>
   <textarea class="col-md-10 description"></textarea>
-  <button class="btn saveBtn col-md-1"></button>
+  <button class="btn saveBtn col-md-1">Save</button>
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
